# telegram-private-bot-webhook

./: .env.example  .gitignore  ALIYUN-STEP-BY-STEP.md  DEPLOYMENT-GUIDE.md  README.md  VPS-QUICK-START.md  install.bat  pyproject.toml  run.bat
.github/workflows/: ci.yml
deploy/: cloudflared-example.yml  telegram-private-bot-polling.service  telegram-private-bot-webhook.service
src/telegram_private_bot_webhook/: __init__.py  bot.py  config.py  dotenv_loader.py  main.py  rules.py
